[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/components/blocks/block/scripts/block.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/blocks/block/sounds/increse_health.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/components/blocks/block/sounds/swap_blocks.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/components/blocks/block/textures/blocker.png" type="Texture" id=4]
[ext_resource path="res://scenes/components/blocks/block/scripts/block_track_catcher.gd" type="Script" id=5]
[ext_resource path="res://scenes/components/blocks/block/textures/block_aim_2.png" type="Texture" id=6]
[ext_resource path="res://scenes/components/blocks/block_destroy/BlockDestroy.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/components/blocks/block/textures/stencil.png" type="Texture" id=8]
[ext_resource path="res://scenes/components/blocks/block/textures/hp.png" type="Texture" id=9]
[ext_resource path="res://scenes/components/blocks/block/textures/bg.png" type="Texture" id=10]
[ext_resource path="res://scenes/components/blocks/block/textures/block_aim_1.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HP:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HP:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HP:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HP:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DangerAim:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 6 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "external_increse_health"
} ]
}

[node name="Block" type="StaticBody2D"]
z_index = 1
collision_layer = 2147483712
collision_mask = 2147516446
script = ExtResource( 1 )
BlockDestroyScene = ExtResource( 7 )

[node name="BlockTrackCatcher" type="Area2D" parent="."]
visible = false
collision_layer = 16384
collision_mask = 8192
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Collision" type="CollisionShape2D" parent="BlockTrackCatcher"]
shape = SubResource( 1 )

[node name="BlockDestruction" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Collision" type="CollisionShape2D" parent="BlockDestruction"]
position = Vector2( 0, -32 )
shape = SubResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="BG" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="HP" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 9 )

[node name="Stencil" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Blocker" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Rise" type="AnimationPlayer" parent="."]
anims/rise = SubResource( 4 )

[node name="IncreseHealth" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
bus = "Effects"
area_mask = 0

[node name="Health" type="AnimationPlayer" parent="."]
anims/hp1 = SubResource( 5 )
anims/hp2 = SubResource( 6 )
anims/hp3 = SubResource( 7 )
anims/hp4 = SubResource( 8 )

[node name="SwapBlocks" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Effects"
area_mask = 0

[node name="DangerAim" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Danger" type="AnimationPlayer" parent="."]
anims/danger = SubResource( 9 )

[connection signal="body_entered" from="BlockTrackCatcher" to="." method="_on_BlockTrackCatcher_body_entered"]
[connection signal="body_exited" from="BlockTrackCatcher" to="." method="_on_BlockTrackCatcher_body_exited"]
[connection signal="body_entered" from="BlockDestruction" to="." method="_on_BlockDestruction_body_entered"]
[connection signal="body_exited" from="BlockDestruction" to="." method="_on_BlockDestruction_body_exited"]
